# cs50ai

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pythonapp.yml
0_search/: notes.ipynb
0_search/exercises/degrees/: degrees.py  degrees_test.py  util.py
0_search/exercises/tictactoe/: tictactoe.py  tictactoe_test.py
1_knowledge/exercises/knights/: logic.py  puzzle.py  puzzle_test.py
