[tool.poetry]
name = "cs50ai"
version = "0.1.0"
description = "notes and exercises for Harvard's CS50AI course"
authors = ["Pablo Fernandez <fernandezpablo85@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.0.1"
pandas = "^1.0.3"
numpy = "^1.18.2"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
