[tool.poetry]
name = "cs50ai"
version = "0.1.0"
description = "notes and exercises for Harvard's CS50AI course"
authors = ["Pablo Fernandez <fernandezpablo85@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.0.1"
pandas = "^1.0.3"
numpy = "^1.18.2"
matplotlib = "^3.2.1"
pygame = "2.0.0.dev6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"
pre-commit = "^2.2.0"
submit50 = "^3.0.2"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
